--- a/index.html
+++ b/index.html
@@ -67,17 +67,6 @@
                         <input type="text" placeholder="circle" id="shape" />
                     </li>
 
-                    <li class="list-group" class="btn-dark">
-                        <button id="filter-btn" type="button" class="btn-dark">
-                        Filter Table
-                        </button>
-
-                        <button id="clear-btn" type="button" class="btn-dark">
-                        Clear Table
-                        </button>
-
-                    </li>
-
                 </ul>
             </form>
         </div>
@@ -98,8 +87,8 @@
             </table>
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
-        <script src="static/js/data.js"></script>
-        <script src="static/js/app.js"></script>
+        <script src="static/css/js/data.js"></script>
+        <script src="static/css/js/app.js"></script>
 </body>
 
 </html>
